# f15se2-ex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: reverse_engineering_asset_formats.md
src/: comm.h  eg3dcam.c  eg3dload.c  eg3dmap.c  eg3dmath.c  eg3dproj.c  eg3drast.c  eg3dview.c  egcode.h  egcombat.c  egcombat.h  egdata.c  egdata.h  egfileio.c  egflight.c  egframe.c  egframe.h  eghudm.c  eghudr.c  eginput.c  egkeys.c  egmain.c  egmath.c  egmath.h  egsphere.c  egstubs.c  egsys.c  egtacmap.c  egtacmap.h  egtarget.c  egtgt2.c  egthreat.c  egthreat.h  egtypes.h  egui.c  egui.h  enaward.c  enbrief.c  endata.c  endata.h  (+32 more)
src/compat64/: dos.h  egregsh.c
src/shared/: cleanup.c  common.h  drawstr.c  filepic.c  miscimpl.c  ovlimpl.c  picimpl.c  textfmt.c  timer.c
tests/: award_behavior_tests.cpp  end_file_behavior_tests.cpp  gameplay_behavior_tests.cpp  geometry_behavior_tests.cpp  gfx_render_behavior_tests.cpp  load_behavior_tests.cpp  original_behavior_tests.cpp  shared_misc_behavior_tests.cpp  shared_runtime_behavior_tests.cpp  sphere_behavior_tests.cpp  start_behavior_tests.cpp  start_parse_behavior_tests.cpp  utility_behavior_tests.cpp  view_behavior_tests.cpp
tools/f15assets/: README.md  cli.py  map_editor.html  model_viewer.html
tools/f15assets/f15assets/: model3d.py  terrain.py  world.py
tools/f15assets/tests/: test_smoke.py
